chore: add more api foundations